// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav Matches snapshot with accounts links 1`] = `
<ul
  className="menu"
>
  <li
    className="accountsMenuItem"
    key="https://accounts.nice.org.uk/profile"
  >
    <a
      href="https://accounts.nice.org.uk/profile"
    >
      Joe Bloggs
    </a>
  </li>
  <li
    className="accountsMenuItem lastAccountsMenuItem"
    key="https://accounts.nice.org.uk/signout"
  >
    <a
      href="https://accounts.nice.org.uk/signout"
    >
      Sign out
    </a>
  </li>
  <li
    key="link1"
  >
    <a
      aria-current={null}
      href="https://url1/"
    >
      <span>
        First link
      </span>
    </a>
  </li>
  <li
    key="link2"
  >
    <a
      aria-current={null}
      href="https://url2/"
    >
      <span>
        <abbr
          title="Abbreviation title"
        >
          Second link
        </abbr>
      </span>
    </a>
  </li>
</ul>
`;

exports[`Nav Matches snapshot with no accounts links 1`] = `
<nav
  className="nav"
  id="header-menu"
>
  <ul
    className="menu"
  >
    <li
      key="link1"
    >
      <a
        aria-current={null}
        href="https://url1/"
      >
        <span>
          First link
        </span>
      </a>
    </li>
    <li
      key="link2"
    >
      <a
        aria-current={null}
        href="https://url2/"
      >
        <span>
          <abbr
            title="Abbreviation title"
          >
            Second link
          </abbr>
        </span>
      </a>
    </li>
  </ul>
</nav>
`;
